syntax = "proto3";

package bluetooth;

message BluetoothConfig {
  // Enable powerd suspend management callbacks.
  bool enable_suspend_management = 1;

  // Expect bluetooth chip to have reset on resume.
  bool reset_on_resume = 2;

  // Stop the bluetooth adapter on suspend and start it on resume.
  bool stop_on_suspend = 3;
}
